--- a/src/app/admin/sideTabs/upload-content/upload-content.component.html
+++ b/src/app/admin/sideTabs/upload-content/upload-content.component.html
@@ -33,12 +33,98 @@
                         <div class="card shadow mb-2">
                             <!-- Card Header - Dropdown -->
                             <div class="card-header py-4 d-flex flex-row align-items-center justify-content-between">
-                                <h6 class="m-0 font-weight-bold text-primary">Upload Faculty Video</h6>
+                                <h6 class="m-0 font-weight-bold text-primary">Manage Faculty Videos</h6>
                             </div>
                             <!-- Card Body -->
                             <div class="card-body">
                                 <div class="chart-area">
-                                
+                                    <label>Step One</label>
+                                    <br>
+                                    <mat-form-field appearance="fill" style="width: 40%;">
+                                      <mat-label>Select the campus</mat-label>
+                                      <mat-select [formControl]="campusControl"  required >
+                                        <mat-option>--</mat-option>
+                                        <mat-option *ngFor="let campus of campuses" [value]="campus" (click)="campusSelect(campus)">
+                                          {{campus.campus_name}}
+                                        </mat-option>
+                                      </mat-select>
+                                      <mat-error *ngIf="campusControl.hasError('required')">Please choose a campus</mat-error>
+                                    </mat-form-field>
+                                    <br>
+                                <!-- Faculty Selection Body -->
+                                <label>Step Two</label>
+                                    <br>
+                                    <mat-form-field appearance="fill" style="width: 40%;">
+                                      <mat-label>Select the faculty</mat-label>
+                                      <mat-select [formControl]="facultyControl" required>
+                                        <mat-option>--</mat-option>
+                                        <mat-option *ngFor="let faculty of faculties" [value]="faculty" (click)="facultySelect(faculty)">
+                                          {{faculty.faculty_name}}
+                                        </mat-option>
+                                      </mat-select>
+                                      <mat-error *ngIf="facultyControl.hasError('required')">Please choose a faculty</mat-error>
+                                    </mat-form-field>
+                                        <div class="row" style="position: absolute; margin-top: -20%;margin-left: 85%;">
+                                            <div class="example-button-container">
+                                                <button mat-mini-fab color="primary" (click)="addNewVideo()" style="margin-bottom: 20%;" matTooltip="add a new video">
+                                                <mat-icon>add_circle</mat-icon>
+                                                </button>
+                                            </div>
+                                            <div class="example-button-container">
+                                                <button mat-mini-fab color="primary" matTooltip="edit a existing video">
+                                                <mat-icon>remove_circle</mat-icon>
+                                                </button>
+                                            </div>
+                                            <div class="example-button-container">
+                                                <button mat-mini-fab color="warn" matTooltip="remove a existing video">
+                                                <mat-icon>cancel</mat-icon>
+                                                </button>
+                                            </div>
+                                        </div>
+                                    <br>
+                                    <!-- Video Selection Body -->
+                                    <div class="card shadow mb-2" style="padding: 4%; border-width: 0ch;">
+                                    <label>Step Three (Video details)</label>
+                                        <br>
+                                        <label>3.1</label>
+                                        <br>
+                                        <!-- The tittle of the video -->
+                                        <mat-form-field class="example-full-width" appearance="fill">
+                                            <mat-label>Tittle</mat-label>
+                                            <input type="text" matInput [formControl]="tittleFormControl" [errorStateMatcher]="matcher"
+                                                   placeholder="Ex. Introduction">
+                                            <mat-hint>Tittle length should be 3 to 25</mat-hint>
+                                            <mat-error *ngIf="tittleFormControl.hasError('email') && !tittleFormControl.hasError('required')">
+                                              Please enter a valid email address
+                                            </mat-error>
+                                            <mat-error *ngIf="tittleFormControl.hasError('required')">
+                                              Tittle is <strong>required</strong>
+                                            </mat-error>
+                                        </mat-form-field>
+                                        <br>
+                                        <label>3.2</label>
+                                        <br>
+                                        <!-- The subTittles of the video -->
+                                        <mat-form-field class="example-chip-list" appearance="fill">
+                                            <mat-label>Categories</mat-label>
+                                            <mat-chip-list #chipList aria-label="Select or add a category">
+                                              <mat-chip *ngFor="let category of categories">
+                                                {{category.category}} 
+                                              </mat-chip>
+                                              <input placeholder="New category..."
+                                                     [matChipInputFor]="chipList"
+                                                     [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+                                                     [matChipInputAddOnBlur]="addOnBlur"
+                                                     (matChipInputTokenEnd)="add($event)">
+                                            </mat-chip-list>
+                                          </mat-form-field>
+                                          <br>
+                                        <label>3.3</label>
+                                        <br>
+                                        <!-- The tittle of the video -->
+                                        <button type="button" style="height: 50px; border-radius: 39px;" mat-stroked-button color="primary" (click)="fileInput.click()">{{fileName}}</button>
+                                        <input hidden (change)="onFileSelected($event)" #fileInput type="file" id="file">
+                                    </div>
                                 </div>
                             </div>
                         </div>
