--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -1,5 +1,6 @@
 
 // Custom Theming for Angular Material
+@use '~@angular/material' as mat;
 // For more information: https://material.angular.io/guide/theming
 @import '~@angular/material/theming';
 // Plus imports for other components in your app.
@@ -7,20 +8,20 @@
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
 // Be sure that you only ever include this mixin once!
-@include mat-core();
+@include mat.core();
 
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$kg-app-cicd-primary: mat-palette($mat-indigo);
-$kg-app-cicd-accent: mat-palette($mat-pink, A200, A100, A400);
+$kg-app-cicd-primary: mat.define-palette(mat.$indigo-palette);
+$kg-app-cicd-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
-$kg-app-cicd-warn: mat-palette($mat-red);
+$kg-app-cicd-warn: mat.define-palette(mat.$red-palette);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$kg-app-cicd-theme: mat-light-theme((
+$kg-app-cicd-theme: mat.define-light-theme((
   color: (
     primary: $kg-app-cicd-primary,
     accent: $kg-app-cicd-accent,
@@ -31,5 +32,5 @@ $kg-app-cicd-theme: mat-light-theme((
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
-@include angular-material-theme($kg-app-cicd-theme);
+@include mat.all-component-themes($kg-app-cicd-theme);
 
